--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage":"https://github.com/manicsegithub/Portfolio",
+  "homepage":"https://manicsegithub.github.io/Portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
